[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trivy"]

[project]
name = "pytrivy"
version = "0.1.2"
description = "A Python SDK for the Trivy CLI: scan container images, query vulnerabilities, licenses, packages, and generate SBOMs from Python."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "whosthatbloke", email = "github.3rqh7@passmail.net" }
]
keywords = ["trivy", "security", "vulnerability", "sbom", "container", "cve", "cyclonedx", "spdx"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typeguard",
    "pyexcel",
    "pyexcel-xls",
    "pyexcel-xlsx",
    "pyexcel-xlsxw",
]

[project.urls]
Homepage = "https://github.com/whosthatbloke/pytrivy"
Repository = "https://github.com/whosthatbloke/pytrivy"
Issues = "https://github.com/whosthatbloke/pytrivy/issues"


[tool.pytest.ini_options]
testpaths = ["tests"]
# We tell pytest the root is where the code lives
pythonpath = ["."]
